--- a/src/makefile.bsd
+++ b/src/makefile.bsd
@@ -35,7 +35,8 @@ LIBS += \
    -l boost_thread$(BOOST_LIB_SUFFIX) \
    -l db_cxx$(BDB_LIB_SUFFIX) \
    -l ssl \
-   -l crypto
+   -l crypto \
+   -l execinfo
 
 ifndef USE_UPNP
 	override USE_UPNP = -
@@ -94,7 +95,7 @@ DEBUGFLAGS=-g
 
 # CXXFLAGS can be specified on the make command line, so we use xCXXFLAGS that only
 # adds some defaults in front. Unfortunately, CXXFLAGS=... $(CXXFLAGS) does not work.
-xCXXFLAGS=-O2 -msse2 -pthread -Wall -Wextra -Wformat -Wformat-security -Wno-unused-parameter \
+xCXXFLAGS=-O0 -msse2 -pthread -Wall -Wextra -Wformat -Wformat-security -Wno-unused-parameter \
     $(DEBUGFLAGS) $(DEFS) $(HARDENING) $(CXXFLAGS)
 
 # LDFLAGS can be specified on the make command line, so we use xLDFLAGS that only
@@ -155,7 +156,7 @@ OBJS += obj/txdb-bdb.o
 endif
 
 test check: test_flappycoin FORCE
-	./test_flappycoin
+	./test_BottleCaps
 
 # auto-generated dependencies:
 -include obj/*.P
